Open-MX 1.1.903 aka 1.2-rc3
==========================================================

Bug fixes:
* Fix installation when using DESTDIR.

Other improvements from previous release:
* Drop features that were deprecated since 1.1:
  + make installonly (use make install instead).
  + IFACES in the open-mx.conf file (use OMX_IFACES instead).

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.1.902 aka 1.2-rc2 (October 23rd 2009, svn r2802)
==========================================================

Bug fixes:
* Redirect omxoed errors to /var/log/omxoed.log so that we can
  avoid hangs when running omx_init through ssh.
* Fix build with the intel compiler icc.
* Fix build with against 2.6.32 kernels.
* Fix the management of the medium message fragment size.
* Fix an invalid assertion when inserting an early medium fragment
  at the beginning of the partner early queue.
* Fix some possible aliasing problems.

Other improvements from previous release:
* Add --with-shared-ring-entries to reduce vmalloc memory requirements.
* Misc documentation updates.

Open-MX 1.1.901 aka 1.2-rc1 (September 23rd 2009, svn r2757)
============================================================
The OpenMPI regcache release.

Major improvements from previous release:
* Implement mx__regcache_clean() properly so that OpenMPI forcing
  MX_RCACHE=2 does not cause data corruption.
* Use dlmalloc internally so that OpenMPI cannot cause deadlock by
  trying to cleanup the regcache when it intercept Open-MX internal
  allocations. --disable-internal-malloc may disable it.

Bug fixes:
* Fix the truncating of medium messages on the receive side so as to
  not write outside of the receive buffer.
* Fix the transferred length reported on the sender when discarding
  a large message in the unexpected handler.
* Fix some potential aliasing problems in the library.

Other improvements from previous release: