@@ -3,6 +3,8 @@ Open-MX 1.1.903 aka 1.2-rc3
 
 Bug fixes:
 * Fix installation when using DESTDIR.
+* Use udev last_rule option to make sure that no default rule will
+  ever override Open-MX rules.
 
 Other improvements from previous release:
 * Drop features that were deprecated since 1.1:
